[package]
name = "anyhowed"
version = "0.1.2"
edition = "2024"
authors = ["user-with-username"]
description = "Anyhow but with red 'error:' in terminal"
license = "MIT"
repository = "https://github.com/user-with-username/anyhowed"
readme = "README.md"
keywords = ["error", "error-handling", "anyhow", "colored"]
categories = ["development-tools", "rust-patterns"]


[dependencies]
